[gd_scene load_steps=10 format=3 uid="uid://cgn3rgifq01fe"]

[ext_resource type="Script" path="res://objetos/enemigos/serpiente/enemy_snake_bit.gd" id="1_16avc"]
[ext_resource type="Script" path="res://clases/hurtbox.gd" id="2_22ja4"]
[ext_resource type="Texture2D" uid="uid://cd5xshyc4pdcn" path="res://sprites/enemigos/Nairan - Torpedo Ship - Base.png" id="2_m4j6x"]
[ext_resource type="AudioStream" uid="uid://be33myiabs1u4" path="res://sonidos/Da√±o a enemigo.mp3" id="4_0s1uj"]
[ext_resource type="AudioStream" uid="uid://c3n4anctthlp2" path="res://sonidos/Muerte enemigo.mp3" id="5_32mjf"]

[sub_resource type="Curve" id="Curve_f2dhn"]
_data = [Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ww5p7"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ulvg"]
size = Vector2(48, 48)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_eopms"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("4_0s1uj")

[node name="EnemySnakeHead" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
motion_mode = 1
script = ExtResource("1_16avc")
max_health = 15.0
speed = 1000.0
movement_curve = SubResource("Curve_f2dhn")
factor = 10000
process_x = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.15683e-06, 1.6199e-06)
rotation = 3.14159
scale = Vector2(2.83511, 2.83511)
texture = ExtResource("2_m4j6x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.12692e-05, 1.23978e-05)
rotation = -1.57079
shape = SubResource("RectangleShape2D_ww5p7")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("owner_node")]
visible = false
collision_layer = 8
collision_mask = 4
script = ExtResource("2_22ja4")
owner_node = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1.15076e-05, -1.21593e-05)
rotation = -1.57079
shape = SubResource("RectangleShape2D_5ulvg")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AudioHit" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_eopms")
volume_db = -10.0

[node name="AudioDeath" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_32mjf")
volume_db = -8.0

[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_area_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
